# custom_allocator

./: .gitignore  CMakeLists.txt  allocator.cpp  main.cpp
